--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.20.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "method-override": "^3.0.0",
     "mongodb": "^3.6.4"
   }
 }
