.env 의 개인정보 삭제

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 PORT = 8080
-DB_URL  = 'mongodb+srv://hodo323:rlaqkgk1@cluster0.go1xq.mongodb.net/
-todoapp?retryWrites=true&w=majority'
+DB_URL  = '본인의 DB URL'
